--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,14 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!DOCTYPE ScrollView>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.Registro">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
@@ -17,6 +19,7 @@
             android:scaleX="1.5"
             android:scaleY="1.5"
             android:src="@mipmap/ic_reciclyng_person_1_foreground" />
+
         <EditText
             android:id="@+id/et_alias"
             android:layout_width="match_parent"
@@ -29,6 +32,7 @@
             android:textColor="@color/darkGrey"
             android:textColorHint="@color/grey"
             android:textStyle="bold" />
+
         <EditText
             android:id="@+id/et_dni"
             android:layout_width="match_parent"
@@ -42,6 +46,7 @@
             android:textColor="@color/darkGrey"
             android:textColorHint="@color/grey"
             android:textStyle="bold" />
+
         <EditText
             android:id="@+id/et_mail"
             android:layout_width="match_parent"
@@ -55,13 +60,14 @@
             android:textColor="@color/darkGrey"
             android:textColorHint="@color/grey"
             android:textStyle="bold" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/rec_rounded"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/et_password"
@@ -95,6 +101,7 @@
                 app:layout_constraintWidth_percent="0.1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -135,6 +142,63 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cb_TerminosCondiciones"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:gravity="center"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Acepto las " />
+
+            <TextView
+                android:id="@+id/btn_condicionesDelServicio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Condiciones del Servicio"
+                android:textColor="@color/green"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_registrarse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:backgroundTint="@color/green"
+            android:text="Registrarse"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ya tienes cuenta? " />
+
+            <TextView
+                android:id="@+id/btn_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textColor="@color/green"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
