--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,6 +99,13 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent"
+            android:visibility="gone"
+            android:layout_gravity="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
