--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="grey">#C2C2C2</color>
     <color name="lightGrey">#E9E9E9</color>
     <color name="transparent">#00000000</color>
-
+    <color name="red">#FB594A</color>
 </resources>
