--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -1,17 +1,27 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:layout_marginTop="20dp">
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/darkGrey"
+        android:visibility="gone"
+        android:src="@drawable/baseline_arrow_back_ios_24"
 
+        />
     <TextView
         android:id="@+id/action_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/inter"
         android:text="Título de la ActionBar"
-        android:textSize="20dp"
         android:textColor="@color/darkGrey"
         android:textFontWeight="900"
-        android:fontFamily="@font/inter"/>
-</LinearLayout>
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"/>
+</RelativeLayout>
