--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_marginTop="20dp">
+    android:layout_marginTop="20dp"
+    android:background="@color/white">
     <ImageView
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
