--- a/app/src/main/res/layout/fragment_q_r.xml
+++ b/app/src/main/res/layout/fragment_q_r.xml
@@ -21,7 +21,7 @@
         android:visibility="gone">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -50,6 +50,8 @@
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="10dp"
                     android:text="+0"
+                    android:rotation="0"
+                    android:gravity="start"
                     android:textColor="@color/green"
                     android:textSize="30sp"
                     android:textStyle="bold" />
@@ -58,8 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
+                android:layout_gravity="center"
                 android:text="Puntos"
                 android:textColor="@color/darkGrey"
                 android:textSize="50sp"
@@ -75,20 +76,6 @@
             android:layout_marginBottom="40dp"
             android:backgroundTint="@color/green"
             android:text="Escanear QR"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-        <Button
-            android:id="@+id/btnSumar"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="40dp"
-            android:backgroundTint="@color/green"
-            android:text="Sumar"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="25sp"
