--- a/app/src/main/res/layout/activity_canjear_puntos.xml
+++ b/app/src/main/res/layout/activity_canjear_puntos.xml
@@ -42,10 +42,13 @@
             android:textSize="30sp"
             android:textStyle="bold" />
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-        </ListView>
-    </LinearLayout>
-
+            android:id="@+id/lvlistar"
+            android:layout_width="409dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_constraintBottom_toBottomOf="parent"
+            android:layout_constraintEnd_toEndOf="parent"
+            android:layout_constraintStart_toStartOf="parent"
+            android:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 </LinearLayout>
