--- a/app/src/main/res/layout/activity_canjear_puntos.xml
+++ b/app/src/main/res/layout/activity_canjear_puntos.xml
@@ -1,55 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.FragmentQR">
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/transparent"
-        android:visibility="gone"
-        android:layout_constraintTop_toTopOf="parent"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintEnd_toEndOf="parent" />
-
-    <!--PUNTOS A CANJEAR-->
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_constraintTop_toBottomOf="@id/progressBar"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintEnd_toEndOf="parent">
+        tools:context=".fragments.FragmentQR">
 
-        <TextView
-            android:id="@+id/tv_puntajeActual"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="@color/green"
-            android:textSize="50sp"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
-
-        <TextView
+        <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Puntos"
-            android:textColor="@color/darkGrey"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:background="@color/transparent"
+            android:visibility="gone" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_puntajeActual"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textColor="@color/green"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Puntos"
+                android:textColor="@color/darkGrey"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+            <ListView
+                android:id="@+id/lvlistar"
+                android:layout_width="409dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"/>
+        </LinearLayout>
 
-        <ListView
-            android:id="@+id/lvlistar"
-            android:layout_width="409dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"/>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
