--- a/app/src/main/res/layout/adapter_item_canje.xml
+++ b/app/src/main/res/layout/adapter_item_canje.xml
@@ -21,11 +21,12 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
             <ImageView
                 android:id="@+id/product_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@mipmap/img_person_perfile_foreground"
                 android:layout_marginRight="16dp" >
 
@@ -66,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="@color/darkGrey"
-                android:text="Nombre del producto"/>
+                android:text="descripcion del producto"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
