--- a/app/src/main/res/layout/activity_canjear_puntos.xml
+++ b/app/src/main/res/layout/activity_canjear_puntos.xml
@@ -36,11 +36,12 @@
                 android:textColor="@color/darkGrey"
                 android:textSize="30sp"
                 android:textStyle="bold" />
+
             <ListView
                 android:id="@+id/lvlistar"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"/>
+                android:layout_marginHorizontal="20dp" />
         </LinearLayout>
 
     </LinearLayout>
