--- a/app/src/main/res/layout/adapter_item_canje.xml
+++ b/app/src/main/res/layout/adapter_item_canje.xml
@@ -63,7 +63,7 @@
 
             <TextView
                 android:id="@+id/product_Desc"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="@color/darkGrey"
