Error color titulo item canje

--- a/app/src/main/res/layout/adapter_item_canje.xml
+++ b/app/src/main/res/layout/adapter_item_canje.xml
@@ -50,6 +50,7 @@
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:text="Titulo"
+                    android:textColor="@color/darkGrey"
                     android:textAllCaps="true"
                     android:layout_marginRight="8dp"/>
                 <TextView
