Arreglo errores visuales

--- a/app/src/main/res/layout/activity_canjear_puntos.xml
+++ b/app/src/main/res/layout/activity_canjear_puntos.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/lvlistar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp" />
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="20dp"/>
         </LinearLayout>
 
     </LinearLayout>
