--- a/app/src/main/res/layout/activity_canje_exitoso.xml
+++ b/app/src/main/res/layout/activity_canje_exitoso.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="color.tpfinaltusi.fragments.FragmentQR">
+    tools:context=".fragments.FragmentQR">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -13,62 +13,89 @@
         android:layout_gravity="center"
         android:background="@color/transparent"
         android:visibility="gone" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="60dp"
-        >
-        <TextView
-            android:id="@+id/product_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:text="Titulo"
-            android:layout_marginRight="8dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:text="YoReciclo"
-            android:textColor="@color/green"
-            />
-    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/product_image"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:src="@mipmap/img_person_perfile_foreground">
-    </ImageView>
-
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/layoutOcultar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/tv_puntajeActual"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:layout_marginTop="60dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="@color/green"
-            android:textSize="50sp"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/product_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:text="Titulo"
+                    android:textColor="@color/darkGrey"
+                    android:textAllCaps="true"
+                    android:layout_marginRight="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="YoReciclo"
+                    android:textColor="@color/green"
+                    android:textSize="30sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/Imagen_persona"
+                android:src="@mipmap/img_person_perfile_foreground">
+
+            </ImageView>
+        </LinearLayout>
+
+        <!--PUNTOS A CANJEAR-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Puntos"
-            android:textColor="@color/darkGrey"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_puntajeActual"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/green"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Puntos restantes"
+                android:textColor="@color/darkGrey"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="40dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
