--- a/app/src/main/res/layout/custom_view_noticias.xml
+++ b/app/src/main/res/layout/custom_view_noticias.xml
@@ -17,16 +17,16 @@
             android:id="@+id/dateTextView"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginTop="9dp"
+            android:background="@drawable/rec_rounded_green"
+            android:fontFamily="@font/inter"
+            android:gravity=""
+            android:padding="10dp"
             android:paddingBottom="4dp"
             android:text="29\nSept."
             android:textColor="@color/white"
             android:textSize="24sp"
-            android:fontFamily="@font/inter"
-            android:textStyle="bold"
-            android:background="@drawable/rec_rounded_green"
-            android:gravity=""
-            android:padding="10dp"
-            android:layout_marginTop="9dp"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
