--- a/app/src/main/res/layout/activity_canjear_puntos.xml
+++ b/app/src/main/res/layout/activity_canjear_puntos.xml
@@ -6,13 +6,7 @@
         android:orientation="vertical"
         tools:context=".fragments.FragmentQR">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/transparent"
-            android:visibility="gone" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +30,14 @@
                 android:textColor="@color/darkGrey"
                 android:textSize="30sp"
                 android:textStyle="bold" />
-
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:background="@color/transparent"
+                android:visibility="visible" />
             <ListView
                 android:id="@+id/lvlistar"
                 android:layout_width="match_parent"
