--- a/app/src/main/res/layout/fragment_aprobacion_reportes.xml
+++ b/app/src/main/res/layout/fragment_aprobacion_reportes.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.FragmentReporte"
+    tools:context=".fragments.FragmentAprobacionReportes"
     android:id="@+id/swapRefresh">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
