--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,10 @@
     <style name="AlertDialogCustomStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:background">@android:color/white</item>
     </style>
+    <style name="MenuTextItemStyle">
+        <item name="android:background">#FFFFFF</item> <!-- Fondo blanco -->
+        <item name="android:textColor">#000000</item> <!-- Texto negro -->
+    </style>
+
+
 </resources>
