--- a/app/src/main/res/layout/fragment_creacion_qr.xml
+++ b/app/src/main/res/layout/fragment_creacion_qr.xml
@@ -28,6 +28,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:hint="Puntos"
+                    android:textColor="@color/darkGrey"
                     android:layout_alignParentLeft="true"
                     android:inputType="number"
                     />
