Otra correccion de color xd

--- a/app/src/main/res/layout/activity_aprobacion_detalle_reporte.xml
+++ b/app/src/main/res/layout/activity_aprobacion_detalle_reporte.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="">
 
             <TextView
                 android:id="@+id/tv_titulo"
@@ -109,6 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
+                    android:textColor="@color/darkGrey"
                     android:text="Defina puntos de recompensa:" />
 
                 <EditText
@@ -119,6 +120,8 @@
                     android:ems="10"
                     android:hint="Puntos"
                     android:inputType="number"
+                    android:textColor="@color/darkGrey"
+                    android:textColorHint="@color/darkGrey"
                     android:text="" />
 
 
